# LinguaMemoir

./: .replit  README.md  app.py  forms.py  models.py  pyproject.toml  render.yaml  replit.md  requirements.txt  routes.py  utils.py
.local/state/replit/agent/design_reference/e9cc6ee3-ee05-4302-bfbf-e6d81d35d158/: 10ef7f91-2de9-4f60-b7bd-ca1f2738b953.html
instance/: pos_system.db
migrations/versions/: 37688b8cc053_initial_migration.py
static/css/: style.css
static/js/: barcode-scanner.js  main.js  pos.js  sw.js
static/uploads/: .gitkeep
templates/: add_product.html  base.html  dashboard.html  edit_product.html  employees.html  inventory.html  invoice.html  login.html  logs.html  pos.html  products.html  sales_report.html
