[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.2"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
flask-login = "^0.6.3"
flask-migrate = "^4.0.4"
wtforms = "^3.2.1"
pillow = "^11.3.0"
reportlab = "^4.4.3"
sqlalchemy = "^2.0.43"
werkzeug = "^3.1.3"
gunicorn = "^23.0.0"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-dotenv = "^1.1.1"
requests = "^2.32.5"
email-validator = "^2.3.0"
