[project]
name = "linguamemoir"
version = "0.1.0"
description = "نظام إدارة لغات"
authors = ["Mostafa Ayman <email@example.com>"]
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = ">=3.11"
Flask = "3.1.2"
Flask-Migrate = "4.0.4"
Flask-WTF = "1.2.2"
Flask-SQLAlchemy = "3.1.1"
gunicorn = "23.0.0"
psycopg2-binary = "2.9.10"
WTForms = "3.2.1"
Pillow = "11.3.0"
reportlab = "4.4.3"
SQLAlchemy = "2.0.43"
Werkzeug = "3.1.3"
Flask-Login = "0.6.3"
fastapi = "0.116.1"
uvicorn = { extras = ["standard"], version = "0.35.0" }
python-dotenv = "1.1.1"
requests = "2.32.5"
pydantic = "2.11.7"
email-validator = "2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
